--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
 
   <!-- LOGO -->
   <div class="logo">
-    <!-- Logo image upload करून नाव बदला -->
-    <img src="logo.png" alt="Dhayareshwar Labs Logo">
-  </div>
+  <img
+    src="data:image/jpeg;base64,/9j/4QGpRXhpZgAATU0AKgAAAAgABgEAAAMAAAABBDgAAAEBAAMAAAABCWgAAAExAAIAAAAmAAAAVodpAAQAAAABAAAAkAESAAMA..."
+    alt="Dhayareshwar Labs Logo">
+</div>
 
   <h1>Dhayareshwar Labs</h1>
   <p>Environmental Testing & Air Quality Monitoring Services</p>
