--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
         Contact on WhatsApp
       </a>
     </div>
+    <p style="text-align:center;">
+    <a href="services.html"><b>View All Services →</b></a>
+    </p>
 
     <footer>
       © 2025 Dhayareshwar Labs. All rights reserved.
