--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
         <li>Led display AQI & Data Support</li>
       </ul>
     </div>
+    <p style="text-align:center;">
+  <a href="services.html"><b>View All Services →</b></a>
+</p>
+  </div>
 
     <!-- WHATSAPP -->
     <div class="whatsapp">
