--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ body {
 .nav-links {
   list-style: none;
   display: flex;
+  gap: 20px;
   margin: 0;
   padding: 0;
 }
@@ -73,9 +74,10 @@ body {
 @media (max-width: 600px) {
   .nav-container {
     flex-direction: column;
+    gap: 10px;
   }
   .nav-links li {
-    margin: 8px 0;
+    margin: 0 15px;
   }
 }
     
