--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="description" content="Dhayareshwar Labs Pune | AQI Monitoring, OCEMS Support. Call +91 98603 34224">
   <meta charset="UTF-8">
   <title>Dhayareshwar Labs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Dhayareshwar Labs",
+  "url": "https://dhayareshwarlabs.online",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+91-98603-34224",
+    "contactType": "customer service",
+    "areaServed": "IN",
+    "availableLanguage": ["English", "Marathi"]
+  }
+}
+</script>
+
 body {
   margin: 0;
   padding: 0;
@@ -213,6 +230,12 @@ body {
       <a href="https://wa.me/919860334224" target="_blank">
         Contact on WhatsApp
       </a>
+    </div>
+      <p>
+📞 Call Us:
+<a href="tel:+919860334224">+91 98603 34224</a>
+</p>
+
     </div>
     <p style="text-align:center;">
     <a href="services.html"><b>View All Services →</b></a>
