--- a/index.html
+++ b/index.html
@@ -176,6 +176,34 @@ body {
       color: #777;
       font-size: 14px;
     }
+    .products {
+  margin-top: 30px;
+}
+
+.product-grid {
+  display: grid;
+  gap: 20px;
+}
+
+.product-card {
+  border: 1px solid #ddd;
+  padding: 12px;
+  border-radius: 6px;
+}
+
+.product-card img {
+  width: 100%;
+  max-height: 160px;
+  object-fit: contain;
+}
+
+.price {
+  color: green;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 8px;
+}
+
   </style>
 </head>
 
@@ -224,6 +252,60 @@ body {
         <li>Led display AQI & Data Support</li>
       </ul>
   </div>
+    <div class="products">
+  <h2>Our Products</h2>
+
+  <div class="product-grid">
+
+    <div class="product-card">
+      <img src="aqi.jpg" alt="AQI Monitoring System">
+      <h3>AQI Monitoring System</h3>
+      <p>
+        Real-time Ambient Air Quality Monitoring System.
+        PM2.5, PM10 आणि gas parameters measure करून
+        industries, society आणि public places साठी
+        accurate AQI data provide करतो.
+      </p>
+      <div class="price">₹ 2,50,000 /- (Starting)</div>
+    </div>
+
+    <div class="product-card">
+      <img src="ocems.jpg" alt="OCEMS System">
+      <h3>OCEMS System</h3>
+      <p>
+        Online Continuous Emission Monitoring System (OCEMS).
+        Stack emission data real-time capture करून
+        CPCB / MPCB server ला automatic transmit करतो.
+        Industrial compliance साठी mandatory solution.
+      </p>
+      <div class="price">₹ 8,50,000 /- (Approx)</div>
+    </div>
+
+    <div class="product-card">
+      <img src="ledaqi.jpg" alt="LED AQI Display">
+      <h3>LED AQI Display Board</h3>
+      <p>
+        Outdoor LED AQI Display Board.
+        Factory gate, public area किंवा society साठी
+        live AQI data display करण्यासाठी ideal solution.
+      </p>
+      <div class="price">₹ 80,000 – ₹ 1,20,000 /-</div>
+    </div>
+
+    <div class="product-card">
+      <img src="waterocems.jpg" alt="Water OCEMS">
+      <h3>Water OCEMS System</h3>
+      <p>
+        Online Continuous Effluent Monitoring System.
+        Water parameters monitor करून
+        CPCB / MPCB compliance साठी
+        automatic data reporting system.
+      </p>
+      <div class="price">₹ 7,00,000 /- (Starting)</div>
+    </div>
+
+  </div>
+</div>
 
     <!-- WHATSAPP -->
     <div class="whatsapp">
