--- a/index.html
+++ b/index.html
@@ -261,10 +261,8 @@ body {
       <img src="aqi.jpg" alt="AQI Monitoring System">
       <h3>AQI Monitoring System</h3>
       <p>
-        Real-time Ambient Air Quality Monitoring System.
-        PM2.5, PM10 आणि gas parameters measure करून
-        industries, society आणि public places साठी
-        accurate AQI data provide करतो.
+       The Air Quality Monitoring System (AQMS) is an advanced, reliable solution designed to continuously monitor ambient air quality in real time. The system accurately measures particulate matter (PM2.5 and PM10) along with key gaseous pollutants to provide precise and actionable air quality data.
+       AQMS is widely used across industrial facilities, construction sites, residential areas, smart city projects, highways, and public spaces. The system ensures continuous data acquisition, storage, and visualization through a cloud-based dashboard, enabling users to monitor air quality remotely via web or mobile platforms.
       </p>
       <div class="price">₹ 2,50,000 /- (Starting)</div>
     </div>
@@ -274,11 +272,11 @@ body {
       <h3>OCEMS System</h3>
       <p>
         Online Continuous Emission Monitoring System (OCEMS).
-        Stack emission data real-time capture करून
-        CPCB / MPCB server ला automatic transmit करतो.
-        Industrial compliance साठी mandatory solution.
+        Stack emission data real-time capture done transmit to
+        CPCB / MPCB server by automatic transmit.
+        Industrial compliance for mandatory solution.
       </p>
-      <div class="price">₹ 8,50,000 /- (Approx)</div>
+      <div class="price">₹ 3,50,000 /- (Approx)</div>
     </div>
 
     <div class="product-card">
@@ -286,8 +284,8 @@ body {
       <h3>LED AQI Display Board</h3>
       <p>
         Outdoor LED AQI Display Board.
-        Factory gate, public area किंवा society साठी
-        live AQI data display करण्यासाठी ideal solution.
+        Factory gate, public area or society for
+        live AQI data display ideal solution.
       </p>
       <div class="price">₹ 80,000 – ₹ 1,20,000 /-</div>
     </div>
@@ -297,11 +295,11 @@ body {
       <h3>Water OCEMS System</h3>
       <p>
         Online Continuous Effluent Monitoring System.
-        Water parameters monitor करून
-        CPCB / MPCB compliance साठी
+        Water parametersparameter can
+        CPCB / MPCB compliance for
         automatic data reporting system.
       </p>
-      <div class="price">₹ 7,00,000 /- (Starting)</div>
+      <div class="price">₹ 2,00,000 /- (Starting)</div>
     </div>
 
   </div>
