--- a/index.html
+++ b/index.html
@@ -271,10 +271,8 @@ body {
       <img src="ocems.jpg" alt="OCEMS System">
       <h3>OCEMS System</h3>
       <p>
-        Online Continuous Emission Monitoring System (OCEMS).
-        Stack emission data real-time capture done transmit to
-        CPCB / MPCB server by automatic transmit.
-        Industrial compliance for mandatory solution.
+      The Online Continuous Emission Monitoring System (OCEMS) is a regulatory-compliant solution designed to continuously monitor stack emissions from industrial processes in real time. The system measures critical emission parameters and automatically transmits validated data to the CPCB / SPCB (MPCB) servers as per statutory requirements
+      OCEMS ensures transparent, tamper-resistant, and uninterrupted monitoring of industrial emissions. The system consists of certified gas analyzers, particulate monitors, data acquisition systems (DAS), and secure communication modules to provide accurate and reliable emission data.
       </p>
       <div class="price">₹ 3,50,000 /- (Approx)</div>
     </div>
@@ -283,9 +281,8 @@ body {
       <img src="ledaqi.jpg" alt="LED AQI Display">
       <h3>LED AQI Display Board</h3>
       <p>
-        Outdoor LED AQI Display Board.
-        Factory gate, public area or society for
-        live AQI data display ideal solution.
+        The LED AQI Display Board is a high-visibility digital display solution designed to show real-time Air Quality Index (AQI) and pollutant data for public awareness and regulatory compliance. The display receives live data from AQI Monitoring Systems or cloud servers and presents it in a clear, readable format for outdoor and indoor installations.
+        The LED AQI Display Board is widely installed at industrial gates, construction sites, public places, residential societies, smart city projects, and highways to inform the public about current air quality conditions
       </p>
       <div class="price">₹ 80,000 – ₹ 1,20,000 /-</div>
     </div>
@@ -294,10 +291,8 @@ body {
       <img src="waterocems.jpg" alt="Water OCEMS">
       <h3>Water OCEMS System</h3>
       <p>
-        Online Continuous Effluent Monitoring System.
-        Water parametersparameter can
-        CPCB / MPCB compliance for
-        automatic data reporting system.
+        The Water OCEMS (Online Continuous Effluent Monitoring System) is an automated, regulatory-compliant solution designed to continuously monitor industrial effluent and wastewater discharge parameters in real time. The system measures key water quality parameters and securely transmits data to CPCB / SPCB (MPCB) servers as per statutory guidelines.
+        Water OCEMS ensures continuous, transparent, and tamper-proof monitoring of treated effluent from industries. The system includes certified online analyzers, sensors, a data acquisition system (DAS), and a secure communication module for accurate data capture and reporting.
       </p>
       <div class="price">₹ 2,00,000 /- (Starting)</div>
     </div>
