--- a/index.html
+++ b/index.html
@@ -297,7 +297,15 @@ body {
       <div class="price">₹ 2,00,000 /- (Starting)</div>
     </div>
 
-  </div>
+  </div><div style="text-align:center;margin-top:30px;">
+  <a href="AQI Display_Technical_Specification.pdf" 
+     target="_blank"
+     style="background:#2c3e50;color:#fff;padding:12px 20px;
+            text-decoration:none;border-radius:6px;font-weight:bold;">
+    Download AQMS Brochure (PDF)
+  </a>
+</div>
+
 </div>
 
     <!-- WHATSAPP -->
