--- a/contact.html
+++ b/contact.html
@@ -69,6 +69,16 @@ button:hover {
 </p>
 
 </div>
+<h1>Contact Dhayareshwar Labs</h1>
+
+<p><b>Phone:</b> +91 9860334224</p>
+<p><b>Email:</b> info@dhayareshwarlabs.online</p>
+<p><b>Location:</b> Maharashtra, India</p>
+
+<p>
+Call us for AQMS, OCEMS, AQI Display installation and
+environmental compliance support.
+</p>
 
 </body>
 </html>
