--- a/products.html
+++ b/products.html
@@ -1,29 +1,118 @@
-<h1>Our Products</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Products | Dhayareshwar Labs</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<h2>AQI Monitoring System</h2>
-<p>
-Real-time Ambient Air Quality Monitoring System with PM2.5,
-PM10, SO2, NO2 sensors. Suitable for MPCB & CPCB compliance.
-</p>
-<p><b>Price:</b> ₹1,20,000 onwards</p>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f6f8;
+      margin: 0;
+      padding: 0;
+    }
 
-<h2>OCEMS System</h2>
-<p>
-Online Continuous Emission Monitoring System with live data
-transfer to MPCB servers as per NGT norms.
-</p>
-<p><b>Price:</b> ₹3,50,000 onwards</p>
+    .container {
+      max-width: 1200px;
+      margin: 20px auto;
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+    }
 
-<h2>LED AQI Display Board</h2>
-<p>
-Outdoor LED display for live AQI data at construction sites
-and industrial locations.
-</p>
-<p><b>Price:</b> ₹85,000 onwards</p>
+    h1 {
+      text-align: center;
+      color: #2c3e50;
+    }
 
-<h2>Water OCEMS</h2>
-<p>
-Online Effluent Monitoring System for pH, COD, BOD, TSS
-with cloud & MPCB connectivity.
-</p>
-<p><b>Price:</b> ₹4,50,000 onwards</p>
+    .product-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .product {
+      border: 1px solid #ddd;
+      padding: 15px;
+      border-radius: 6px;
+    }
+
+    .product h2 {
+      color: #1f3c88;
+      font-size: 18px;
+    }
+
+    .price {
+      color: green;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+
+    .back {
+      text-align: center;
+      margin-top: 30px;
+    }
+
+    a {
+      text-decoration: none;
+      color: #1f3c88;
+      font-weight: bold;
+    }
+  </style>
+</head>
+
+<body>
+
+<div class="container">
+  <h1>Our Products</h1>
+
+  <div class="product-grid">
+
+    <div class="product">
+      <h2>AQI Monitoring System</h2>
+      <p>
+        Real-time Ambient Air Quality Monitoring System with PM2.5, PM10,
+        SO2 and NO2 sensors. Suitable for MPCB & CPCB compliance.
+      </p>
+      <p class="price">Price: ₹1,20,000 onwards</p>
+    </div>
+
+    <div class="product">
+      <h2>OCEMS System</h2>
+      <p>
+        Online Continuous Emission Monitoring System with automatic data
+        transfer to MPCB servers as per NGT norms.
+      </p>
+      <p class="price">Price: ₹3,50,000 onwards</p>
+    </div>
+
+    <div class="product">
+      <h2>LED AQI Display Board</h2>
+      <p>
+        Outdoor LED display for live AQI data at construction sites
+        and industrial locations.
+      </p>
+      <p class="price">Price: ₹85,000 onwards</p>
+    </div>
+
+    <div class="product">
+      <h2>Water OCEMS</h2>
+      <p>
+        Online Effluent Monitoring System for pH, COD, BOD, TSS with
+        cloud & MPCB connectivity.
+      </p>
+      <p class="price">Price: ₹4,50,000 onwards</p>
+    </div>
+
+  </div>
+
+  <div class="back">
+    <a href="index.html">← Back to Home</a>
+  </div>
+
+</div>
+
+</body>
+</html>
