--- a/index.html
+++ b/index.html
@@ -214,10 +214,12 @@ body {
       <a href="index.html">Dhayareshwar Labs</a>
     </div>
     <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
+      <nav class="navbar">
+  <a href="index.html">Home</a>
+  <a href="products.html">Products</a>
+  <a href="services.html">Services</a>
+  <a href="contact.html">Contact</a>
+</nav>
   </div>
 </nav>
 
