--- a/index.html
+++ b/index.html
@@ -1,39 +1,209 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="description" content="Dhayareshwar Labs Pune | AQI Monitoring, OCEMS Support. Call +91 98603 34224">
   <meta charset="UTF-8">
-  <title>Dhayareshwar Labs</title>
+  <title>Dhayareshwar Labs | AQMS OCEMS Solutions</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
-    <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Organization",
-  "name": "Dhayareshwar Labs",
-  "url": "https://dhayareshwarlabs.online",
-  "contactPoint": {
-    "@type": "ContactPoint",
-    "telephone": "+91-98603-34224",
-    "contactType": "customer service",
-    "areaServed": "IN",
-    "availableLanguage": ["English", "Marathi"]
-  }
-}
-</script>
+    html {
+      scroll-behavior: smooth;
+    }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-  background: #f4f6f8;
-}
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f4f6f8;
+      color: #333;
+    }
 
-.container {
-  max-width: 900px;
-  margin: 20px auto;
-  background: #ffffff;
+    /* NAVBAR */
+    .navbar {
+      position: sticky;
+      top: 0;
+      background: #2c3e50;
+      padding: 14px;
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      z-index: 1000;
+    }
+
+    .navbar a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .navbar a:hover {
+      text-decoration: underline;
+    }
+
+    /* SECTIONS FIX */
+    section {
+      padding: 70px 20px;
+      scroll-margin-top: 80px; /* IMPORTANT FIX */
+      background: #fff;
+      margin: 20px auto;
+      max-width: 1200px;
+      border-radius: 8px;
+    }
+
+    h1, h2 {
+      text-align: center;
+      color: #2c3e50;
+    }
+
+    p {
+      text-align: center;
+      line-height: 1.6;
+    }
+
+    /* PRODUCTS */
+    .product-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .product {
+      border: 1px solid #ddd;
+      padding: 15px;
+      border-radius: 6px;
+      background: #fafafa;
+    }
+
+    .price {
+      color: green;
+      font-weight: bold;
+      text-align: center;
+      margin-top: 8px;
+    }
+
+    /* CONTACT */
+    .contact {
+      text-align: center;
+    }
+
+    .whatsapp {
+      display: inline-block;
+      margin-top: 15px;
+      background: #25d366;
+      color: #fff;
+      padding: 12px 22px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      color: #777;
+      font-size: 14px;
+    }
+  </style>
+</head>
+
+<body>
+
+<!-- NAVIGATION -->
+<nav class="navbar">
+  <a href="#home">Home</a>
+  <a href="#products">Products</a>
+  <a href="#services">Services</a>
+  <a href="#contact">Contact</a>
+</nav>
+
+<!-- HOME -->
+<section id="home">
+  <h1>Dhayareshwar Labs</h1>
+  <p><b>Environmental Monitoring & Compliance Solutions</b></p>
+  <p>
+    We provide CPCB / MPCB compliant AQMS, OCEMS, Water OCEMS
+    and LED AQI Display solutions for industries and projects
+    across Maharashtra.
+  </p>
+</section>
+
+<!-- PRODUCTS -->
+<section id="products">
+  <h2>Our Products</h2>
+
+  <div class="product-grid">
+
+    <div class="product">
+      <h3>AQI Monitoring System</h3>
+      <p>
+        Real-time Ambient Air Quality Monitoring System with
+        PM2.5, PM10 and gas sensors. Cloud dashboard supported.
+      </p>
+      <p class="price">Starting from ₹ 2,50,000</p>
+    </div>
+
+    <div class="product">
+      <h3>OCEMS System</h3>
+      <p>
+        Online Continuous Emission Monitoring System with
+        automatic data transfer to MPCB / CPCB servers.
+      </p>
+      <p class="price">Starting from ₹ 8,50,000</p>
+    </div>
+
+    <div class="product">
+      <h3>LED AQI Display Board</h3>
+      <p>
+        High brightness outdoor LED display for real-time AQI
+        and pollution parameter visibility.
+      </p>
+      <p class="price">₹ 80,000 – ₹ 1,20,000</p>
+    </div>
+
+    <div class="product">
+      <h3>Water OCEMS</h3>
+      <p>
+        Online Continuous Effluent Monitoring System for pH,
+        COD, BOD, TSS with secure data reporting.
+      </p>
+      <p class="price">Starting from ₹ 7,00,000</p>
+    </div>
+
+  </div>
+</section>
+
+<!-- SERVICES -->
+<section id="services">
+  <h2>Our Services</h2>
+  <p>✔ AQMS & OCEMS Installation</p>
+  <p>✔ MPCB / CPCB Compliance Support</p>
+  <p>✔ Data Reporting & Calibration</p>
+  <p>✔ Annual Maintenance Contracts (AMC)</p>
+</section>
+
+<!-- CONTACT -->
+<section id="contact">
+  <h2>Contact Us</h2>
+  <div class="contact">
+    <p><b>Dhayareshwar Labs</b></p>
+    <p>📞 +91 98603 34224</p>
+    <p>📧 info@dhayareshwarlabs.online</p>
+    <p>📍 Maharashtra, India</p>
+
+    <a class="whatsapp"
+       href="https://wa.me/919860334224"
+       target="_blank">
+       Contact on WhatsApp
+    </a>
+  </div>
+</section>
+
+<footer>
+  © 2025 Dhayareshwar Labs. All rights reserved.
+</footer>
+
+</body>
+</html>
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0,0,0,0.08);
