--- a/index.html
+++ b/index.html
@@ -1,169 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Dhayreshwar Labs</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Test</title>
 
-  <!-- CSS START -->
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f4f6f8;
-    }
-
-    /* NAVBAR */
-    .navbar {
-      background: #2c3e50;
-      padding: 12px 0;
-    }
-
-    .nav-container {
-      max-width: 1000px;
-      margin: auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0 15px;
-    }
-
-    .nav-logo {
-      color: #fff;
-      font-size: 20px;
-      font-weight: bold;
-      text-decoration: none;
-    }
-
-    .nav-links {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-      margin: 0;
-      padding: 0;
-    }
-
-    .nav-links a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .nav-links a:hover {
-      text-decoration: underline;
-    }
-
-    /* CONTAINER */
-    .container {
-      max-width: 1000px;
-      margin: 20px auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-    }
-
-    h1, h2 {
-      text-align: center;
-      color: #2c3e50;
-    }
-
-    p {
-      text-align: center;
-      color: #555;
-    }
-
-    /* PRODUCTS */
-    .product-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-      margin-top: 30px;
-    }
-
-    .product-card {
-      border: 1px solid #ddd;
-      padding: 15px;
-      border-radius: 6px;
-      text-align: center;
-    }
-
-    .price {
-      color: green;
-      font-weight: bold;
-      margin-top: 8px;
-    }
-
-    /* FOOTER */
-    footer {
-      text-align: center;
-      margin: 30px 0;
-      color: #777;
-      font-size: 14px;
-    }
-
-    /* MOBILE */
-    @media (max-width: 600px) {
-      .nav-links {
-        gap: 12px;
-        font-size: 14px;
-      }
-    }
-  </style>
-  <!-- CSS END -->
+<style>
+body {
+  background: #f4f6f8;
+  font-family: Arial;
+}
+h1 {
+  color: green;
+  text-align: center;
+}
+</style>
 
 </head>
 
 <body>
 
-  <!-- NAVBAR -->
-  <div class="navbar">
-    <div class="nav-container">
-      <a class="nav-logo" href="index.html">Dhayreshwar Labs</a>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <!-- CONTENT -->
-  <div class="container">
-    <h1>Our Products</h1>
-
-    <div class="product-grid">
-
-      <div class="product-card">
-        <h3>AQI Monitoring System</h3>
-        <p>Real-time air quality monitoring as per CPCB norms.</p>
-        <div class="price">₹ 1,25,000</div>
-      </div>
-
-      <div class="product-card">
-        <h3>OCEMS System</h3>
-        <p>Continuous emission monitoring with cloud reporting.</p>
-        <div class="price">₹ 3,50,000</div>
-      </div>
-
-      <div class="product-card">
-        <h3>LED AQI Display</h3>
-        <p>Outdoor LED display for public AQI visibility.</p>
-        <div class="price">₹ 85,000</div>
-      </div>
-
-      <div class="product-card">
-        <h3>Water OCEMS</h3>
-        <p>Online water quality monitoring system.</p>
-        <div class="price">₹ 2,80,000</div>
-      </div>
-
-    </div>
-  </div>
-
-  <footer>
-    © 2025 Dhayreshwar Labs. All rights reserved.
-  </footer>
+<h1>CSS OK – TEXT NOT VISIBLE</h1>
 
 </body>
 </html>
