--- a/products.html
+++ b/products.html
@@ -1,118 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Products | Dhayareshwar Labs</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Products | Dhayareshwar Labs</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f6f8;
-      margin: 0;
-      padding: 0;
-    }
+<style>
+body{
+  margin:0;
+  font-family:Arial, sans-serif;
+  background:#f4f6f8;
+}
 
-    .container {
-      max-width: 1200px;
-      margin: 20px auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-    }
+/* NAVBAR */
+.navbar{
+  background:#2c3e50;
+}
+.navbar ul{
+  list-style:none;
+  margin:0;
+  padding:10px;
+  display:flex;
+  justify-content:center;
+  gap:25px;
+}
+.navbar a{
+  color:#fff;
+  text-decoration:none;
+  font-weight:bold;
+}
+.navbar a:hover{
+  text-decoration:underline;
+}
 
-    h1 {
-      text-align: center;
-      color: #2c3e50;
-    }
+/* CONTAINER */
+.container{
+  max-width:1000px;
+  margin:20px auto;
+  background:#fff;
+  padding:20px;
+  border-radius:8px;
+  box-shadow:0 0 10px rgba(0,0,0,0.08);
+}
 
-    .product-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 30px;
-    }
+/* PRODUCTS */
+.product-grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:20px;
+}
+.product-card{
+  border:1px solid #ddd;
+  padding:15px;
+  border-radius:6px;
+  text-align:center;
+}
+.product-card img{
+  width:100%;
+  max-height:140px;
+  object-fit:contain;
+}
+.price{
+  color:green;
+  font-weight:bold;
+  margin-top:8px;
+}
 
-    .product {
-      border: 1px solid #ddd;
-      padding: 15px;
-      border-radius: 6px;
-    }
-
-    .product h2 {
-      color: #1f3c88;
-      font-size: 18px;
-    }
-
-    .price {
-      color: green;
-      font-weight: bold;
-      margin-top: 10px;
-    }
-
-    .back {
-      text-align: center;
-      margin-top: 30px;
-    }
-
-    a {
-      text-decoration: none;
-      color: #1f3c88;
-      font-weight: bold;
-    }
-  </style>
+footer{
+  text-align:center;
+  margin-top:30px;
+  color:#777;
+  font-size:14px;
+}
+</style>
 </head>
 
 <body>
 
+<!-- NAVBAR -->
+<div class="navbar">
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="products.html">Products</a></li>
+    <li><a href="services.html">Services</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</div>
+
 <div class="container">
-  <h1>Our Products</h1>
 
-  <div class="product-grid">
+<h1 style="text-align:center;">Our Products</h1>
 
-    <div class="product">
-      <h2>AQI Monitoring System</h2>
-      <p>
-        Real-time Ambient Air Quality Monitoring System with PM2.5, PM10,
-        SO2 and NO2 sensors. Suitable for MPCB & CPCB compliance.
-      </p>
-      <p class="price">Price: ₹1,20,000 onwards</p>
-    </div>
+<div class="product-grid">
 
-    <div class="product">
-      <h2>OCEMS System</h2>
-      <p>
-        Online Continuous Emission Monitoring System with automatic data
-        transfer to MPCB servers as per NGT norms.
-      </p>
-      <p class="price">Price: ₹3,50,000 onwards</p>
-    </div>
+<div class="product-card">
+  <img src="aqi.png">
+  <h3>AQI Monitoring System</h3>
+  <p>Real-time ambient air quality monitoring with cloud dashboard.</p>
+  <div class="price">₹1,20,000+</div>
+</div>
 
-    <div class="product">
-      <h2>LED AQI Display Board</h2>
-      <p>
-        Outdoor LED display for live AQI data at construction sites
-        and industrial locations.
-      </p>
-      <p class="price">Price: ₹85,000 onwards</p>
-    </div>
+<div class="product-card">
+  <img src="ocems.png">
+  <h3>OCEMS System</h3>
+  <p>Continuous emission monitoring as per MPCB / CPCB norms.</p>
+  <div class="price">₹3,50,000+</div>
+</div>
 
-    <div class="product">
-      <h2>Water OCEMS</h2>
-      <p>
-        Online Effluent Monitoring System for pH, COD, BOD, TSS with
-        cloud & MPCB connectivity.
-      </p>
-      <p class="price">Price: ₹4,50,000 onwards</p>
-    </div>
+<div class="product-card">
+  <img src="led.png">
+  <h3>LED AQI Display</h3>
+  <p>Outdoor LED display for AQI & pollution parameters.</p>
+  <div class="price">₹70,000+</div>
+</div>
 
-  </div>
-
-  <div class="back">
-    <a href="index.html">← Back to Home</a>
-  </div>
+<div class="product-card">
+  <img src="water.png">
+  <h3>Water OCEMS</h3>
+  <p>Online effluent quality monitoring system.</p>
+  <div class="price">₹4,00,000+</div>
+</div>
 
 </div>
 
+<footer>
+© 2025 Dhayareshwar Labs. All rights reserved.
+</footer>
+
+</div>
 </body>
 </html>
