--- a/index.html
+++ b/index.html
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Dhayareshwar Labs | AQI, AQMS, OCEMS</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Dhayareshwar Labs</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
-body{
-  margin:0;
-  font-family:Arial, sans-serif;
-  background:#f4f6f8;
-}
+  <style>
+    /* ALL CSS ONLY HERE */
 
-/* NAVBAR */
-.navbar{
-  background:#2c3e50;
-}
-.navbar ul{
-  list-style:none;
-  margin:0;
-  padding:10px;
-  display:flex;
-  justify-content:center;
-  gap:25px;
-}
-.navbar a{
-  color:#fff;
-  text-decoration:none;
-  font-weight:bold;
-}
-.navbar a:hover{
-  text-decoration:underline;
-}
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f4f6f8;
+    }
+
+    .navbar {
+      background: #2c3e50;
+      padding: 12px;
+      text-align: center;
+    }
+
+    .navbar a {
+      color: #fff;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .navbar a:hover {
+      text-decoration: underline;
+    }
 
 /* CONTAINER */
 .container{
