--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ Environmental Monitoring • AQI • AQMS • OCEMS Solutions
 </div>
 
 <div class="product-card">
-  <img src="led.png" alt="LED AQI Display">
+  <img src="led1.png" alt="LED AQI Display">
   <h3>LED AQI Display</h3>
   <p>Outdoor LED display for AQI & environmental parameters visibility.</p>
   <div class="price">₹70,000+</div>
