--- a/products.html
+++ b/products.html
@@ -108,7 +108,7 @@ footer{
 </div>
 
 <div class="product-card">
-  <img src="led.png">
+  <img src="led1.png">
   <h3>LED AQI Display</h3>
   <p>Outdoor LED display for AQI & pollution parameters.</p>
   <div class="price">₹70,000+</div>
