--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@ footer{
     <li><a href="products.html">Products</a></li>
     <li><a href="services.html">Services</a></li>
     <li><a href="contact.html">Contact</a></li>
+    <li><a href="client-report.html">Client Login</a></li>
   </ul>
 </div>
 
@@ -194,6 +195,13 @@ Environmental Monitoring • AQI • AQMS • OCEMS Solutions
 <a href="https://wa.me/919860334224" target="_blank">
 Contact on WhatsApp
 </a>
+</div>
+  <div style="text-align:center;margin-top:20px;">
+  <a href="client-report.html"
+     style="padding:10px 20px;background:#333;color:#fff;
+     text-decoration:none;border-radius:6px;">
+     🔐 Client Report Login
+  </a>
 </div>
 
 <footer>
