--- a/client-report.html
+++ b/client-report.html
@@ -2,116 +2,62 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Client Report – Dhayareshwar Labs</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Client Report Access | Dhayareshwar Labs</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-body{
-  font-family: Arial, sans-serif;
-  background:#f4f6f8;
-  margin:0;
-}
-.container{
-  max-width:900px;
-  margin:20px auto;
-  background:#fff;
-  padding:20px;
-  border-radius:8px;
-}
-button{
-  padding:10px 16px;
-  margin:5px;
-  border:none;
-  border-radius:5px;
-  cursor:pointer;
-}
-.btn-green{background:#25d366;color:#fff;}
-.btn-blue{background:#2196f3;color:#fff;}
-.btn-orange{background:#ff9800;color:#fff;}
-.btn-gray{background:#555;color:#fff;}
-
-#loginBox{
-  text-align:center;
-  margin-top:100px;
-}
-input{
-  padding:10px;
-  width:220px;
-}
-iframe{
-  width:100%;
-  height:500px;
-  border:1px solid #ccc;
-}
+body { font-family: Arial; background:#f4f6f8; margin:0; }
+.box { max-width:420px; margin:80px auto; background:#fff; padding:20px; border-radius:8px; box-shadow:0 0 10px #ccc; }
+input, button { width:100%; padding:10px; margin-top:10px; }
+button { background:#0a7cff; color:#fff; border:none; cursor:pointer; }
+.report { display:none; margin-top:20px; }
+iframe { width:100%; height:400px; border:1px solid #ccc; }
 </style>
 </head>
 
 <body>
 
-<!-- 🔐 LOGIN -->
-<div id="loginBox">
-  <h2>🔐 Client Login</h2>
-  <input type="password" id="pwd" placeholder="Enter Password">
-  <br><br>
-  <button class="btn-blue" onclick="checkPwd()">Login</button>
-  <p id="msg" style="color:red;"></p>
+<div class="box">
+<h2>🔐 Client Report Login</h2>
+
+<input type="password" id="pwd" placeholder="Enter Client Password">
+<button onclick="check()">Login</button>
+
+<div class="report" id="report">
+<hr>
+
+<h3>📄 AQI / OCEMS Report</h3>
+
+<iframe src="AQI Display_Technical_Specification.pdf"></iframe>
+
+<button onclick="window.print()">🖨️ Print</button>
+
+<button onclick="share()">📲 WhatsApp Share</button>
+
+<p id="gps">📍 Location: Fetching...</p>
 </div>
-
-<!-- 📄 REPORT -->
-<div class="container" id="reportBox" style="display:none;">
-
-<h2 style="text-align:center;">📄 AQI / OCEMS Client Report</h2>
-<p style="text-align:center;">Dhayareshwar Labs</p>
-
-<!-- GPS -->
-<div style="text-align:center;">
-  <button class="btn-orange" onclick="getLocation()">📍 Get GPS Location</button>
-  <p id="location"></p>
-</div>
-
-<!-- PDF VIEW -->
-<h3>📄 Report PDF</h3>
-<iframe src="sample-report.pdf"></iframe>
-
-<!-- ACTION BUTTONS -->
-<div style="text-align:center;margin-top:15px;">
-  <button class="btn-gray" onclick="window.print()">🖨️ Print</button>
-  <button class="btn-green" onclick="shareWA()">📲 WhatsApp Share</button>
-</div>
-
 </div>
 
 <script>
-/* PASSWORD */
-function checkPwd(){
-  var pass="DL2025";   // 🔑 CHANGE CLIENT PASSWORD HERE
+function check(){
+  const pass="client123";   // 🔐 change password here
   if(document.getElementById("pwd").value===pass){
-    document.getElementById("loginBox").style.display="none";
-    document.getElementById("reportBox").style.display="block";
-  }else{
-    document.getElementById("msg").innerText="Wrong password";
+    document.getElementById("report").style.display="block";
+  } else {
+    alert("Wrong Password");
   }
 }
 
-/* GPS */
-function getLocation(){
-  if(navigator.geolocation){
-    navigator.geolocation.getCurrentPosition(function(pos){
-      document.getElementById("location").innerText=
-      "📍 Location: "+pos.coords.latitude.toFixed(6)+", "+
-      pos.coords.longitude.toFixed(6);
-    },function(){
-      document.getElementById("location").innerText="Allow location access";
-    });
-  }
-}
+// GPS
+navigator.geolocation.getCurrentPosition(p=>{
+document.getElementById("gps").innerText=
+"📍 Location: "+p.coords.latitude+", "+p.coords.longitude;
+});
 
-/* WHATSAPP */
-function shareWA(){
-  let loc=document.getElementById("location").innerText;
-  let url=window.location.href;
-  let txt="Client Report – Dhayareshwar Labs%0A"+loc+"%0A"+url;
-  window.open("https://wa.me/?text="+txt,"_blank");
+// WhatsApp
+function share(){
+let msg="Dhayareshwar Labs - Client AQI/OCEMS Report";
+window.open("https://wa.me/?text="+encodeURIComponent(msg));
 }
 </script>
 
