--- a/live-data.html
+++ b/live-data.html
@@ -44,10 +44,10 @@ fetch("https://api.jsonbin.io/v3/b/64f000000000000000000")
 
 // DEMO data (remove this when real API ready)
 const data={
- pm25:(Math.random()*120).toFixed(1),
- pm10:(Math.random()*200).toFixed(1),
- so2:(Math.random()*80).toFixed(1),
- nox:(Math.random()*90).toFixed(1),
+ pm25:(60Math.random()*120).toFixed(1),
+ pm10:(80Math.random()*200).toFixed(1),
+ so2:(40Math.random()*80).toFixed(1),
+ nox:(45Math.random()*90).toFixed(1),
  ph:(6+Math.random()*2).toFixed(2),
  flow:(Math.random()*50).toFixed(1)
 };
