--- a/live-data.html
+++ b/live-data.html
@@ -19,7 +19,7 @@ h2{text-align:center}
 <body>
 
 <div class="container">
-<h2>📡 Live OCEMS / AQI Data</h2>
+<h2>📡 Live AQI Data</h2>
 
 <div class="grid">
   <div class="card">PM2.5<br><span class="value" id="pm25">--</span> µg/m³</div>
