--- a/live-data.html
+++ b/live-data.html
@@ -26,7 +26,7 @@ h2{text-align:center}
   <div class="card">PM10<br><span class="value" id="pm10">--</span> µg/m³</div>
   <div class="card">SO₂<br><span class="value" id="so2">--</span> µg/m³</div>
   <div class="card">NOx<br><span class="value" id="nox">--</span> µg/m³</div>
-  <div class="card">pH<br><span class="value" id="ph">--</span></div>
+  <div class="card">CO<br><span class="value" id="co">--</span> ppm</div>
   <div class="card">Flow<br><span class="value" id="flow">--</span> m³/hr</div>
 </div>
 
@@ -44,10 +44,10 @@ fetch("https://api.jsonbin.io/v3/b/64f000000000000000000")
 
 // DEMO data (remove this when real API ready)
 const data={
- pm25:(60+Math.random()*120).toFixed(1),
+ pm25:(60+Math.random()*50).toFixed(1),
  pm10:(80+Math.random()*200).toFixed(1),
- so2:(40+Math.random()*80).toFixed(1),
- nox:(45+Math.random()*90).toFixed(1),
+ so2:(40+Math.random()*40).toFixed(1),
+ nox:(45+Math.random()*50).toFixed(1),
  ph:(6+Math.random()*2).toFixed(2),
  flow:(Math.random()*10).toFixed(1)
 };
@@ -56,7 +56,7 @@ document.getElementById("pm25").innerText=data.pm25;
 document.getElementById("pm10").innerText=data.pm10;
 document.getElementById("so2").innerText=data.so2;
 document.getElementById("nox").innerText=data.nox;
-document.getElementById("ph").innerText=data.ph;
+document.getElementById("co").innerText=data.co;
 document.getElementById("flow").innerText=data.flow;
 
 document.getElementById("time").innerText=
