--- a/live-data.html
+++ b/live-data.html
@@ -48,7 +48,7 @@ const data={
  pm10:(80+Math.random()*200).toFixed(1),
  so2:(40+Math.random()*40).toFixed(1),
  nox:(45+Math.random()*50).toFixed(1),
- ph:(6+Math.random()*2).toFixed(2),
+ co:(6+Math.random()*2).toFixed(2),
  flow:(Math.random()*10).toFixed(1)
 };
 
