--- a/live-data.html
+++ b/live-data.html
@@ -70,6 +70,10 @@ document.getElementById("time").innerText=
 setInterval(loadData,10000);
 loadData();
 </script>
+<footer>
+© 2025 Dhayareshwar Labs. All rights reserved.
+</footer>
 
+</div>
 </body>
 </html>
