--- a/contact.html
+++ b/contact.html
@@ -79,6 +79,10 @@ button:hover {
 Call us for AQMS, OCEMS, AQI Display installation and
 environmental compliance support.
 </p>
+</div> 
+<div class="back">
+      <a href="index.html">← Back to Home</a>
+</div>
 
 </body>
 </html>
