--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@ z-index:9999;
 display:none;
 ">
   We use cookies to improve your experience and analyze website traffic.
-  <a href="/privacy-policy" style="color:#4da6ff;text-decoration:underline;">
+  <a href="https://dhayareshwarlabs.online/privacy-policy/">
+ style="color:#4da6ff;text-decoration:underline;">
     Privacy Policy
   </a>
   <button onclick="acceptCookies()" style="
